--- a/blog/templates/Post/allposts.html
+++ b/blog/templates/Post/allposts.html
@@ -1,12 +1,11 @@
 {% extends "base.html" %}
-
-
-
-<!--<div class="jumbotron banner">-->
-
-<!--    <a class="btn btn-primary btn-lg" href="{% url 'blog:create_post' %}" role="button">Add new post</a>-->
-<!--</div>-->
+{ % load static %}
 {% block body %}
+<div class="jumbotron banner">
+
+    <a class="btn btn-primary btn-lg" href="{% url 'blog:create_post' %}" role="button">Add new post</a>
+</div>
+
         {% for post in posts %}
 
         <div class="col-md-4">
@@ -16,8 +15,8 @@
                {%endif%}
                 <div class="card-body">
                     <h5 class="card-title">{{post.title}}</h5>
-                    <p class="card-text">{{post.body |safe|truncatewords_html:30}}</p>
-                    <a href="{% url 'blog:detailPost' post.id %}" class="btn btn-primary">Read more</a>
+                    <p class="card-text">{{post.body |safe|truncatewords_html:20}}</p>
+                    <a href="{% url 'blog:post' post.id %}" class="btn btn-primary">Read more</a>
                 </div>
             </div>
 
