--- a/blog/templates/Post/jobDetail.html
+++ b/blog/templates/Post/jobDetail.html
@@ -1,17 +1,20 @@
 {% extends "base.html" %}
+{% load static %}
 
 
-
-<!--<div class="jumbotron banner">-->
-
-<!--    <a class="btn btn-primary btn-lg" href="{% url 'blog:edit_post' post.id %}" role="button">Edit this post</a>-->
-<!--</div>-->
 {% block body %}
+
+<div class="jumbotron banner">
+
+    <a class="btn btn-primary btn-lg" href="{% url 'blog:edit_post' detailPost.id %}" role="button">Edit this post</a>
+</div>
+
+
         <div class="card single_post">
-<!--            <img src="{{post.img.url}}" class="card-img-top" alt="...">-->
+
             <div class="card-body">
-                <h5 class="card-title">{{post}}</h5>
-                <p class="card-text">{{post.body|safe}}</p>
+                <h5 class="card-title">{{detailPost}}</h5>
+                <p class="card-text">{{detailPost.body|safe}}</p>
             </div>
         </div>
 
