--- a/blog/templates/Post/allposts.html
+++ b/blog/templates/Post/allposts.html
@@ -1,25 +1,47 @@
 {% extends "base.html" %}
 { % load static %}
 {% block body %}
+
+
 <div class="jumbotron banner">
 
     <a class="btn btn-primary btn-lg" href="{% url 'blog:create_post' %}" role="button">Add new post</a>
 </div>
 
-        {% for post in posts %}
 
-        <div class="col-md-4">
-            <div class="card" style="width: 18rem;">
-                {% if post.img %}
-                <img src="{{post.img.url}}" class="card-img-top" alt="...">
-               {%endif%}
-                <div class="card-body">
-                    <h5 class="card-title">{{post.title}}</h5>
-                    <p class="card-text">{{post.body |safe|truncatewords_html:20}}</p>
-                    <a href="{% url 'blog:post' post.id %}" class="btn btn-primary">Read more</a>
-                </div>
-            </div>
+{% for post in posts %}
 
+<div class="col-md-4">
+    <div class="card" style="width: 18rem;">
+        {% if post.img %}
+        <img src="{{post.img.url}}" class="card-img-top" alt="...">
+        {%endif%}
+        <div class="card-body">
+            <h5 class="card-title">{{post.title}}</h5>
+            <p class="card-text">{{post.body |safe|truncatewords_html:20}}</p>
+            <a href="{% url 'blog:post' post.id %}" class="btn btn-primary">Read more</a>
         </div>
+    </div>
+
+</div>
 {% endfor %}
+
+{% if posts.has_other_pages %}
+<div class="mt-20">
+<span class="step-links">
+{% if posts.has_previous %}
+<a href="?page={{ posts.previous_page_number }}">Previous</a>
+{% endif %}
+<span class="current">
+Page {{ posts.number }} of {{ posts.paginator.num_pages }}.
+</span>
+{% if posts.has_next %}
+<a href="?page={{ posts.next_page_number }}">Next</a>
+{% endif %}
+</span>
+</div>
+
+{% endif %}
+
+
 {% endblock body %}
